--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <script>
         const status = document.getElementById("status");
         const protocol = window.location.protocol === "https:" ? "wss://" : "ws://";
-        const ws = new WebSocket("ws://" + window.location.host);
+        const ws = new WebSocket(protocol + window.location.host);
 
         ws.onopen = () => status.textContent = "🟢 Connecté au serveur";
         ws.onclose = () => status.textContent = "🔴 Déconnecté";
